--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: HL Granite & Marble Homepage
+title: HL Granite & Marble
 email: hlgranite@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is homepage of HL Granite & Marble. We provide any kind of granite and marble solution,
