--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,9 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 600 & 601, Taman Saga 2
+  - line: Jalan Alor Mengkudu 05400
+  - line: Alor Setar, Malaysia
   
 # Credits content
 credits: 'Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
