Append Sdn. Bhd. in copyright.

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ color:
   
 # Footer settings
 footer:
-  copyright: HL Granite & Marble
+  copyright: HL Granite & Marble Sdn. Bhd.
   location: Location
   social: Around the Web
   credits: Contact
