Add meta tag keyword.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: HL Granite & Marble
 email: hlgranite@gmail.com
 url: http://www.hlgranite.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Malaysia granite marble quartz house renovation tomb nisan buddha rehal kepok."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
