Shorten google map url.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ social:
   - title: envelope
     url: mailto:hlgranite@gmail.com
   - title: map-marker
-    url: https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=Cf6wyzhpOOK7FVDFWQAdzPX9BSmhRUBfE3ZJMDGkTqsKEYPkbA&q=HLGranite+loc:+Kedah,+Malaysia&aq=&sll=6.102237,100.383797&sspn=0.029657,0.052314&vpsrc=6&ie=UTF8&hq=HLGranite&hnear=&ll=6.093587,100.382531&spn=0.001854,0.00327&t=m&z=19&cid=5343873147049093163&iwloc=A
+    url: https://www.google.com/maps/place/HL+GRANITE+%26+MARBLE+SDN.+BHD./@6.093093,100.382251,17z/data=!3m1!4b1!4m2!3m1!1s0x304b44583e352b7d:0x4a2940506e9c282b
 
 # Postal address (add as many lines as necessary)
 address:
