Add keywords and description meta tag.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: HL Granite & Marble
 email: hlgranite@gmail.com
 url: http://www.hlgranite.com
-description: "Malaysia granite marble quartz house renovation tomb nisan buddha rehal kepok."
+description: "HL Granite provides any kind of granite and marble solution, house renovation, kitchen top, flooring, tomb making, Chinese traditional Fengshui, and Malay Batu Nisan."
+keywords: "Granite, Malaysia, marble, quartz, stone, house renovation, tomb, nisan, buddha, rehal, kepok"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
