Correct facebook link

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ social:
   - title: twitter
     url: http://twitter.com/hlgranite
   - title: facebook
-    url: https://www.facebook.com/hlgranite
+    url: https://www.facebook.com/hlgraniteandmarble/
   - title: envelope
     url: mailto:hlgranite@gmail.com
   - title: map-marker
